intel: Chrome OS "hatch" (cometlake) fails on dEQP-GLES31.functional.geometry_shading.layered.render_with_default_layer_cubemap
Various "hatch" boards (including at least kohaku, kindred, helios, dratini, dragonair, see https://www.chromium.org/chromium-os/developer-information-for-chrome-os-devices for more info) are failing on dEQP-GLES31.functional.geometry_shading.layered.render_with_default_layer_cubemap
with the i965 driver (not iris, fwiw). Past history in this group of tests suggest that they're sensitive to GT versions, so it probably is cometlake-specific.
I haven't found yet on whether the test reliably fails or flakes, I could check out a system from the lab and see if that would help (or if the TestResults.qpa would help).
If you have access to the google bug tracker, corresponding one on their end would be https://issuetracker.google.com/issues/150029053